added content, replaced lorem ipsum

--- a/static/index.html
+++ b/static/index.html
@@ -42,11 +42,26 @@
       <div class="typewriter">
     <h1>zashworth2@gmail.com 
         <a href="https://github.com/ashworth-zach">https://github.com/ashworth-zach</a>
-        <a href="https://codepen.io/ashworth-zach"></a><a href="https://codepen.io/ashworth-zach">https://codepen.io/ashworth-zach</a></h1>
+        <a href="https://codepen.io/ashworth-zach"></a></h1>
        
   </div>
+    <p class="github"></p>
     <hr>
-    <h1 class="test"></h1>
+    <h1 class="Frontend"></h1>
+    <li class='react'></li>
+    <li class='angular'></li>
+    <li class="js"></li>
+        <hr>
+
+    <h1 class="backend"></h1>
+    <li class='flask'></li>
+    <li class='django'></li>
+    <li class="asp"></li>
+    <li class="mean"></li>
+        <hr>
+    <h1 class="databases"></h1>
+    <li class="mongo"></li>
+    <li class='mysql'></li>
 </div>
 <div class="test2">
   <div class="header">
